// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for atRule 1`] = `
"@media screen and (min-width: 480px) {
  body {
    background-color: lightgreen;
  }
  a {
  }
}
"
`;

exports[`should match the snapshot for basic 1`] = `
"#main,
ul li {
  margin: auto;
}
"
`;

exports[`should match the snapshot for rules 1`] = `
"a {
  color: red;
}

p {
  padding: 10px;
}

#main {
  border: 1px solid black;
}
"
`;

exports[`should match the snapshot for rulesInAtRules 1`] = `
"@media screen and (min-width: 900px) {
}

@media screen and (min-width: 900px) {
  body {
    padding: 1rem 3rem;
  }
}
@document url(\\"https://www.example.com/\\") {
  h1 {
    color: green;
  }
}

@media screen and (min-width: 900px) {
  html {
    padding: 1rem 3rem;
  }
}
"
`;

exports[`should match the snapshot for wrongComment 1`] = `
"#main,
ul li {
  /* postcss-ignore-line-wrong-comment */
  border: 1px solid black;
  margin: auto;
}
"
`;
